allow selecting type of tqdm progress bar

--- a/examples/01_basic_usage.ipynb
+++ b/examples/01_basic_usage.ipynb
@@ -35,29 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "v_index: 0, v_size: 1\n"
+      "Val: 10.00, Cum: 351.85: : 100%|██████████| 10.0/10.0 [00:01<00:00]\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c43341ac46b4c2cbdde2022829d72eb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0%|          | 0.0/10.0 [00:00<?]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -66,7 +52,8 @@
     "    total=nb_elements, \n",
     "    description_callback=lambda state, args: f\"Val: {args[0]:.2f}, Cum: {float(args[1]):.2f}\",\n",
     "    refresh_steps=2,\n",
-    "    max_bars=2\n",
+    "    max_bars=2,\n",
+    "    leave=True,\n",
     ")\n",
     "\n",
     "def scanning(elements):\n",
@@ -104,41 +91,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "v_index: 0, v_size: 3\n",
-      "v_index: -1, v_size: 3\n",
-      "v_index: -1, v_size: 3\n"
+      "Val: 10.00, Cum: 351.85: : 100%|██████████| 10.0/10.0 [00:01<00:00]\n",
+      "Val: 12.00, Cum: 591.85: : 100%|██████████| 10.0/10.0 [00:01<00:00]\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bb73d24ad744e69afdcef6cf94f0269",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0%|          | 0.0/10.0 [00:00<?]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecb4e7470e904adf920d42acadfa5c76",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0%|          | 0.0/10.0 [00:00<?]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -158,54 +116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "49d055c9",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mInit signature:\u001b[39m tqdm(*args, **kwargs)\n",
-      "\u001b[31mDocstring:\u001b[39m      Experimental IPython/Jupyter Notebook widget using tqdm!\n",
-      "\u001b[31mInit docstring:\u001b[39m\n",
-      "Supports the usual `tqdm.tqdm` parameters as well as those listed below.\n",
-      "\n",
-      "Parameters\n",
-      "----------\n",
-      "display  : Whether to call `display(self.container)` immediately\n",
-      "    [default: True].\n",
-      "\u001b[31mFile:\u001b[39m           ~/micromamba/envs/fg/lib/python3.11/site-packages/tqdm/auto.py\n",
-      "\u001b[31mType:\u001b[39m           type\n",
-      "\u001b[31mSubclasses:\u001b[39m     "
-     ]
-    }
-   ],
-   "source": [
-    "from tqdm.auto import tqdm\n",
-    "tqdm?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "v_index: 0, v_size: 5\n",
-      "v_index: -1, v_size: 5\n",
-      "v_index: -1, v_size: 5\n",
-      "v_index: -1, v_size: 5\n",
-      "v_index: -1, v_size: 5\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e679a684ea74db3a8f4ee88ca2db786",
+       "model_id": "e070fe56a0f74e6cbecd7241453e7f09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,7 +136,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a99e2d6039e4203a214ea2f139c7fd2",
+       "model_id": "e3f29e6e3c9c4c3aa9a96b2773ce916b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0%|          | 0.0/10.0 [00:00<?]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1109921db72a4bc187f5e2b155d6aaa1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,8 +166,9 @@
     "pbar_limited = TqdmProgressMeter(\n",
     "    total=nb_elements, \n",
     "    description_callback=lambda state, args: f\"Task {int(state.v_index) + 1}/{int(state.v_size)}\",\n",
-    "    max_bars=2, # Only show 2 bars for 5 tasks\n",
-    "    refresh_steps=2\n",
+    "    max_bars=3, # Only show 3 bars for 5 tasks\n",
+    "    refresh_steps=2,\n",
+    "    tqdm_type=\"auto\",\n",
     ")\n",
     "\n",
     "def scanning_limited(elements):\n",
