refactor: rename package from jax-progress to jbar

--- a/examples/02_diffrax_usage.ipynb
+++ b/examples/02_diffrax_usage.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using jax-progress with Diffrax\n",
+    "# Using jbar with Diffrax\n",
     "\n",
-    "This notebook demonstrates how `jax-progress` can replace the default `diffrax` progress meter."
+    "This notebook demonstrates how `jbar` can replace the default `diffrax` progress meter."
    ]
   },
   {
@@ -27,7 +27,7 @@
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import diffrax\n",
-    "from jax_progress import TqdmProgressMeter"
+    "from jbar import TqdmProgressMeter"
    ]
   },
   {
