--- a/examples/03_nested_vmap.ipynb
+++ b/examples/03_nested_vmap.ipynb
@@ -5,9 +5,9 @@
    "id": "cell-0",
    "metadata": {},
    "source": [
-    "# Nested Vmap with jax-progress\n",
+    "# Nested Vmap with jbar\n",
     "\n",
-    "This notebook demonstrates how `jax-progress` works with nested `vmap` operations. Each vmap level sees only its immediate context."
+    "This notebook demonstrates how `jbar` works with nested `vmap` operations. Each vmap level sees only its immediate context."
    ]
   },
   {
@@ -20,7 +20,7 @@
     "import time\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "from jax_progress import TqdmProgressMeter\n",
+    "from jbar import TqdmProgressMeter\n",
     "\n",
     "def runtime_sleep(seconds):\n",
     "    time.sleep(float(seconds))"
