--- a/examples/04_shard_map.ipynb
+++ b/examples/04_shard_map.ipynb
@@ -5,9 +5,9 @@
    "id": "cell-0",
    "metadata": {},
    "source": [
-    "# Using jax-progress with shard_map\n",
+    "# Using jbar with shard_map\n",
     "\n",
-    "This notebook demonstrates how `jax-progress` works with `jax.shard_map` for distributed computation across multiple devices. We use virtual CPU devices for demonstration purposes."
+    "This notebook demonstrates how `jbar` works with `jax.shard_map` for distributed computation across multiple devices. We use virtual CPU devices for demonstration purposes."
    ]
   },
   {
@@ -26,7 +26,7 @@
     "import jax.numpy as jnp\n",
     "from jax.sharding import Mesh, PartitionSpec as P, NamedSharding\n",
     "from jax import shard_map\n",
-    "from jax_progress import TqdmProgressMeter\n",
+    "from jbar import TqdmProgressMeter\n",
     "from functools import partial\n",
     "from jax import lax\n",
     "\n",
