--- a/examples/05_shard_map_vmap.ipynb
+++ b/examples/05_shard_map_vmap.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Combining shard_map and vmap\n",
     "\n",
-    "This notebook demonstrates how `jax-progress` can simultaneously track both device-level parallelism (via shard_map) and task-level parallelism (via vmap). The progress meter displays information about both contexts."
+    "This notebook demonstrates how `jbar` can simultaneously track both device-level parallelism (via shard_map) and task-level parallelism (via vmap). The progress meter displays information about both contexts."
    ]
   },
   {
@@ -26,7 +26,7 @@
     "import jax.numpy as jnp\n",
     "from jax.sharding import Mesh, PartitionSpec as P\n",
     "from jax.experimental import shard_map\n",
-    "from jax_progress import TqdmProgressMeter\n",
+    "from jbar import TqdmProgressMeter\n",
     "from functools import partial\n",
     "from jax import lax\n",
     "\n",
