--- a/examples/01_basic_usage.ipynb
+++ b/examples/01_basic_usage.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "97f63952",
    "metadata": {},
    "source": [
-    "# Basic Usage of jax-progress\n",
+    "# Basic Usage of jbar\n",
     "\n",
-    "This notebook demonstrates how to use `jax-progress` with JAX `scan` loops, including support for `vmap`."
+    "This notebook demonstrates how to use `jbar` with JAX `scan` loops, including support for `vmap`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "37751e86",
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "from jax_progress import TqdmProgressMeter\n",
+    "from jbar import TqdmProgressMeter\n",
     "\n",
     "def runtime_sleep(seconds):\n",
     "    time.sleep(float(seconds))"
@@ -26,6 +28,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50165195",
    "metadata": {},
    "source": [
     "## Single Scan Loop\n",
@@ -77,6 +80,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3dd0cfcb",
    "metadata": {},
    "source": [
     "## Vmapped Scan Loop\n",
@@ -88,6 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "aa949ba0",
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +111,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f1820846",
    "metadata": {},
    "source": [
     "## Vmapped Scan with Limited Bars\n",
